Fixing the case study preview sections shifting down due to the typing animation on mobile screen

--- a/styles.css
+++ b/styles.css
@@ -583,7 +583,7 @@ on the case study page */
         line-height: 1.4;
         max-width: 320px;
         margin: 12px auto 0;
-        min-height: 4.5em;
+        min-height: 6.5em;
     }
 
     #background {
@@ -604,12 +604,6 @@ on the case study page */
 
     .case-study {
         padding-bottom: 10px;
-    }
-
-    #scroll-hint {
-        position: relative;
-        margin-top: 10px;
-        display: block;
     }
 }
 
